sample/retrieveUnpackaged/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Next_Bill_Issue_Date__c</fullName>
        <description>Displays the next bill issue date</description>
        <formula>Billing_Account__r.Next_Bill_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Bill Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_of_days_to_extend_due_date__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Enter in the number of days required for the extension</inlineHelpText>
        <label>No. of days to extend due date</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Not_Insured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Insured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees__c</fullName>
        <inlineHelpText>Only required if the application relates to a Non-Residential Customer</inlineHelpText>
        <label>Number of Employees</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;20</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_contacts__c</fullName>
        <inlineHelpText>Often referred to as “One &amp; Done”, First Contact Resolution is the practice of managing customer enquiries or concerns within the first contact. This means handling a customer&apos;s request completely upon first contact and without further follow up.</inlineHelpText>
        <label>Number of contacts</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>more than 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_for_Improvement__c</fullName>
        <label>Opportunity for Improvement</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Original_Due_Date__c</fullName>
        <description>Subtracts the number of days extension from the current due date to get the original due date</description>
        <formula>Due_Date__c -  No_of_days_to_extend_due_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Case_Origin__c</fullName>
        <inlineHelpText>If Case Origin is &quot;Other&quot; provide the specific case origin in this field.</inlineHelpText>
        <label>Other Case Origin</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Reason__c</fullName>
        <label>Other Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overdue_Age_From_Original__c</fullName>
        <description>The number of days the case is overdue. If it&apos;s closed, it uses the close date, otherwise it use&apos;s today&apos;s date</description>
        <formula>IF(Overdue_Flag_from_Original__c == &apos;Yes&apos; || DATEVALUE(ClosedDate) &gt;  Original_Due_Date__c, IF(IsClosed,  DATEVALUE(ClosedDate) -  Original_Due_Date__c, TODAY() - Original_Due_Date__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overdue Age (From Original)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overdue_Amount__c</fullName>
        <formula>TEXT(Billing_Account__r.Overdue_Amount_Formula__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overdue Amount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overdue_Flag__c</fullName>
        <description>Overdue based on the due date (which may or not have been extended) or scheduled reading</description>
        <formula>IF( NOT(IsClosed) &amp;&amp; ((NOT(ISPICKVAL(Status, &apos;Waiting for HiAffinity&apos;)) &amp;&amp; Due_Date__c  &lt; TODAY()) || (ISPICKVAL(Status, &apos;Waiting for HiAffinity&apos;) &amp;&amp;   Reading_Date__c  &lt; TODAY())) , &apos;Yes&apos;, &apos;No&apos;)</formula>
        <label>Overdue Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overdue_Flag_from_Original__c</fullName>
        <description>- If not waiting on hiaf, use the original due date
- Use the scheduled reading date</description>
        <formula>IF( NOT(IsClosed) &amp;&amp; ((NOT(ISPICKVAL(Status, &apos;Waiting for HiAffinity&apos;)) &amp;&amp; Original_Due_Date__c &lt; TODAY()) || (ISPICKVAL(Status, &apos;Waiting for HiAffinity&apos;) &amp;&amp;  Reading_Date__c  &lt; TODAY())) , &apos;Yes&apos;, &apos;No&apos;)</formula>
        <label>Overdue Flag (from Original)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overdue_Image__c</fullName>
        <description>Green - original due date &gt;= today or scheduled reading in the future/today 
Red - Due Date &lt; Today (Not Waiting on Hiaf) or Scheduled Reading &lt; Today (waiting on Hiaf) 
Yellow - between due date and original due date</description>
        <formula>IF( IsClosed, &quot;&quot;, IF( Original_Due_Date__c &gt;= TODAY() || ISBLANK(Original_Due_Date__c) || (ISPICKVAL(Status, &apos;Waiting for HiAffinity&apos;) &amp;&amp;  Reading_Date__c  &gt;= TODAY()), IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Not Due&quot;), IF(((NOT(ISPICKVAL(Status, &apos;Waiting for HiAffinity&apos;)) &amp;&amp; Due_Date__c &lt; TODAY()) || (ISPICKVAL(Status, &apos;Waiting for HiAffinity&apos;) &amp;&amp; Reading_Date__c &lt; TODAY())), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Overdue&quot;), IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;Original Overdue&quot;))))</formula>
        <label>Overdue Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Type__c</fullName>
        <description>Determines if owner is a queue or user</description>
        <formula>IF(LEFT(OwnerId, 3) = &apos;005&apos;, &apos;User&apos;, &apos;Queue&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parks_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Parks Paid</description>
        <label>Parks Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parks_Period_From__c</fullName>
        <description>Parks Period From</description>
        <label>Parks Period From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parks_Period_To__c</fullName>
        <description>Parks Period To</description>
        <label>Parks Period To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parks_Unpaid__c</fullName>
        <description>Parks Unpaid</description>
        <label>Parks Unpaid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_Original_Estimate__c</fullName>
        <label>Payment Amount (Original Estimate)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <description>The periodic payment amount required for the payment plan</description>
        <inlineHelpText>The periodic payment amount required for the payment plan</inlineHelpText>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Direct Debit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Easypay Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Easypay Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Person_Name_Free_Text__c</fullName>
        <description>Name of the person making the complaint</description>
        <inlineHelpText>Name of the person making the complaint, if not recorded in Pulse.</inlineHelpText>
        <label>Person Name (Free text)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Case_Type__c</fullName>
        <description>convert how and record type to Portal meaningful description</description>
        <formula>CASE( Category_Level_3__c, 
   &apos;Update Name&apos;, &apos;Name change request&apos;,
   &apos;Time to Pay Extension&apos;, &apos;More time to pay&apos;,
   &apos;Add/Amend Concession Details&apos;, &apos;Register concession&apos;,
   &apos;Delete Concession&apos;, &apos;Delete concession&apos;,
   &apos;Customer Read&apos;, &apos;Customer meter read&apos;,
   &apos;Portal Password&apos;, &apos;Registration enquiry&apos;,
   &apos;Special Read&apos;, &apos;Move in/out&apos;,
   &apos;Merge Customers&apos;, &apos;Add an account&apos;,
    $RecordType.Name )</formula>
        <label>Portal Case Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if portal processes have sent the email out (to prevent infinite loop)</description>
        <label>Portal Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portal_Move_In_City__c</fullName>
        <label>Move In City (Portal)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Move_In_Postal_Code__c</fullName>
        <label>Move In Postal Code (Portal)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Move_In_Street_Address__c</fullName>
        <inlineHelpText>This is the address the portal user is moving into (For Purchaser/Move In scenarios)</inlineHelpText>
        <label>Move In Street Address (Portal)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Portal_Resolved_By_Article__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates that the case was closed after viewing the portal article</inlineHelpText>
        <label>Resolved By Article in Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <description>Postcode</description>
        <label>Postcode</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_01_01_98__c</fullName>
        <description>Pre 01/01/98</description>
        <label>Pre 01/01/98</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Print_Bill__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print Bill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Privacy_Statement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Privacy Statement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Private_Extension_Available__c</fullName>
        <formula>IF( Property__r.Private_Extension_Available__c , &quot;Available&quot;, &quot;Unavailable&quot;)</formula>
        <inlineHelpText>If Private Extension flag is checked on Property, then it shows &quot;Available&quot; here. Otherwise it is &quot;Unavailable&quot;.</inlineHelpText>
        <label>Private Extension Available</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Displays the name of the Product</description>
        <inlineHelpText>Displays the name of the Product</inlineHelpText>
        <label>Product Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cases (Product Name)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of th program the complaint is related to</description>
        <inlineHelpText>Name of th program the complaint is related to</inlineHelpText>
        <label>Program</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Attributes__c</fullName>
        <label>Property Attributes</label>
        <picklist>
            <picklistValues>
                <fullName>Run Down</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abandoned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>For Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>For Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Occupied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Property_Melways_Reference__c</fullName>
        <formula>Property__r.Directory_Reference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Melways Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Ref__c</fullName>
        <formula>Property__r.CIS_Property_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Ref</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Visit_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Property Visit Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Property_Visit_Completed_Date__c</fullName>
        <description>Field Debt Recovery Officer clicks on the Property Visit Complete button, the current date will be auto filled</description>
        <label>Property Visit Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Property_Visit_Result__c</fullName>
        <label>Property Visit Result</label>
        <picklist>
            <picklistValues>
                <fullName>Restrict</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_inspection_conducted__c</fullName>
        <label>Property inspection conducted?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purchaser_Account_Name__c</fullName>
        <formula>Purchaser_Billing_Account__r.Account_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchaser Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchaser_Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Also applies to Tenant becomes Purchaser situation.</inlineHelpText>
        <label>Purchaser Billing Account</label>
        <referenceTo>Billing_Account__c</referenceTo>
        <relationshipLabel>Cases (As Purchaser Account)</relationshipLabel>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reading_Date__c</fullName>
        <label>Reading Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rebilled_Amount__c</fullName>
        <label>Rebilled Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rebilled_Date__c</fullName>
        <label>Rebilled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rebilled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rebilled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Received_Application_Form__c</fullName>
        <inlineHelpText>Has application form been received?</inlineHelpText>
        <label>Received Application Form?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Received_Evidence_of_Responsibility__c</fullName>
        <inlineHelpText>Has SEWL previously received evidence that the concession card holder is responsible for the water and sewerage accounts at this property?</inlineHelpText>
        <label>Received Evidence of Responsibility?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recommended_Publish_Date__c</fullName>
        <description>The Article Feedback provider can suggest a date for when the article should be published</description>
        <label>Recommended Publish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recommended_Review_Archive_Date__c</fullName>
        <description>The Article Feedback provider can suggest a date for when the article should be reviewed</description>
        <label>Recommended Review / Archive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <description>hidden field used in Quick View Page</description>
        <formula>$RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recovery_Path_For_Add__c</fullName>
        <description>Used specifically for manage payment plans in the add operation</description>
        <label>Recovery Path</label>
        <picklist>
            <picklistValues>
                <fullName>D1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recovery_Path__c</fullName>
        <label>Recovery Path</label>
        <picklist>
            <picklistValues>
                <fullName>D1 - RESIDENTIAL 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2 - RESIDENTIAL 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D3 - TENANT USAGE - RES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PD - Parks and Drainage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N1 - NON RESIDENTIAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N2 - Non Res Serv Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N3 - NON RES USAGE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recycled_Water_Available__c</fullName>
        <formula>IF(Property__r.Recycled_Water_Available__c, &quot;Available&quot;, &quot;Unavailable&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If recycled water is available on the property, then specifying an address will issue a welcome home kit.</inlineHelpText>
        <label>Recycled Water Available</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refer_to_Internal_System__c</fullName>
        <label>Refer to Internal System</label>
        <picklist>
            <picklistValues>
                <fullName>Faults and Emergencies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Waste</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Internal Reference #:</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RemovePaymentPlan_Letter_Type__c</fullName>
        <label>Letter Type</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07cr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07dd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07ddcr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Repayment_Frequency__c</fullName>
        <label>Repayment Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fortnightly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reserve__c</fullName>
        <label>Reserve</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Sent__c</fullName>
        <label>Response Sent?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Restriction_Ability__c</fullName>
        <label>Restriction Ability</label>
        <picklist>
            <picklistValues>
                <fullName>Able to Restrict</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to Restrict</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Restriction_Type__c</fullName>
        <inlineHelpText>Ensure restriction preference type is listed from left to right</inlineHelpText>
        <label>Restriction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Green Bell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferrule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crimped Pipe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fitzroy Box</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Scheduled_Date_Time_of_Visit__c</fullName>
        <defaultValue>Now() + 1</defaultValue>
        <label>Scheduled Date/Time of Visit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scheduled_Reading__c</fullName>
        <label>Scheduled Reading</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Send_Application_Form_To__c</fullName>
        <label>Send Application Form To</label>
        <picklist>
            <picklistValues>
                <fullName>Property Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Account Address</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send_Application_Form__c</fullName>
        <label>Send Application Form?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send_Confirmation_Letter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Confirmation Letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Set_Up_Trade_Waste__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(HIDDEN) Set Up Trade Waste</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Settlement_Date__c</fullName>
        <label>Settlement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <description>The first 255 characters of the full description will be automatically copied here.</description>
        <inlineHelpText>If blank , the first 255 characters of the full description will be automatically copied here.</inlineHelpText>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State</description>
        <label>State/Postcode</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_Portal__c</fullName>
        <description>Free form street address for portal</description>
        <label>Street Address (Portal)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>Street</description>
        <label>Street</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <description>New field added to have a higher level categorisation of the case by business function. Currently only used by Portal, but can be reused at a later date.</description>
        <label>Sub Type</label>
        <picklist>
            <picklistValues>
                <fullName>Article Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concession - Add</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Statement Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Claim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merge Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More Time To Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More Time To Pay Exception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Move In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Move Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notice of Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portal Registration Enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portal Registration Name Match</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submit Meter Read</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concession - Delete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Reading</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject_matter_experts__c</fullName>
        <description>List any known Subject Matter Experts who can assist with this article</description>
        <inlineHelpText>List any known Subject Matter Experts who can assist with this article</inlineHelpText>
        <label>Subject matter experts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Suburb__c</fullName>
        <formula>Property__r.Suburb__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suburb</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suspend_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, Billing Account will be suspended.</inlineHelpText>
        <label>Suspend Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suspend_To_Date__c</fullName>
        <label>Suspend To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Suspension_of_bill_not_required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A field which captures if any action is required as a result of the complaint</description>
        <inlineHelpText>Check box if no action is required. Billing account will not be auto suspended</inlineHelpText>
        <label>Suspension of bill not required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tenant_Account_Name__c</fullName>
        <formula>Tenant_Billing_Account__r.Account_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tenant Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tenant_Action__c</fullName>
        <description>Tenant Action</description>
        <label>Tenant Staying On?</label>
        <picklist>
            <controllingField>Contact_Type__c</controllingField>
            <picklistValues>
                <fullName>Stay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Go</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tenant_Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not required is Non-Tenancy is picked.</inlineHelpText>
        <label>Tenant Billing Account</label>
        <referenceTo>Billing_Account__c</referenceTo>
        <relationshipLabel>Cases (AsTenant Account)</relationshipLabel>
        <relationshipName>Cases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tenant_Name__c</fullName>
        <label>Tenant Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
</CustomObject>